--- a/wiki/FrameworkUsage.wiki
+++ b/wiki/FrameworkUsage.wiki
@@ -7,3 +7,7 @@ This page details how to use the framework.
 
 = Details =
 
+The framework works using a data struct as an application methods template.
+To incorporate a new application in the framework, only a new struct pointing which callbacks should be used needs to be passed.
+
+The main() function handling all the usual tags on input parsing, logging and MPI handling are already provided by the framework.
