Edited wiki page through web user interface.

--- a/wiki/FrameworkUsage.wiki
+++ b/wiki/FrameworkUsage.wiki
@@ -11,3 +11,11 @@ The framework works using a data struct as an application methods template.
 To incorporate a new application in the framework, only a new struct pointing which callbacks should be used needs to be passed.
 
 The main() function handling all the usual tags on input parsing, logging and MPI handling are already provided by the framework.
+
+= Command Line Options =
+
+--help
+--log FILE
+--verbose
+--input FILE
+--output FILE
