--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -2,41 +2,82 @@
 
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{hyperref}
+\usepackage[spanish]{babel}
 
 \begin{document}
 
-\title{Dummy Report}
-\author{Andr\'{e}s More - {\tt more.andres@gmail.com}}
-\date{}
+\title{Facultad de Informatica - Universidad Nacional de La Plata\\Especializaci\'on en C\'omputo de Altas Prestaciones\\Propuesta de Trabajo Final\\Herramientas para el Soporte de Analisis de Rendimiento}
+\author{Alumno: Andr\'es More - {\tt amore@hal.famaf.unc.edu.ar}\\Director: Fernando Tinetti - {\tt fernando@lidi.info.unlp.edu.ar}}
+\date{Mayo 2009}
 
 \twocolumn[
 \begin{@twocolumnfalse}
 \maketitle
 \begin{abstract}
-This document analyze your application.
-\\
+Este documento describe una propuesta de trabajo final para Especializacion en Computo de Altas Prestaciones.
+Idea. Beneficios. Ejemplo.
+Cierre.
 \end{abstract}
 \end{@twocolumnfalse}
 ]
 
 \tableofcontents
 
-\section{Introduction}
+\section{Objetivos}
 
-This section introduces the document.
+Generar una taxonomia de metodos de analisis de rendimiento.
+Realizar una comparacion de los mismos.
+Ejercitar estas herramientas, documentando pasos y problemas comunes.
+Proponer un proceso de analisis para aplicaciones de alto rendimiento.
+Generar infrastructura que soporte automaticamente el analisis de performance.
+Generar una libreria que facilite el desarollo de aplicaciones de altas prestaciones.
+Documentar requerimientos generales de aplicacions de altas prestaciones.
+Generalizar las aplicaciones utilizando un pipeline.
 
-\section{Profiling}
+\section{Motivacion y Estado del Arte}
 
-This section introduces profiling results.
+MPI.
+Expertos en Dominio.
+Analisis de Performance es artesanal.
 
-\section{Scaling}
+\section{Temas a Investigar}
 
-This section introduces scaling results.
+Analisis de Rendimiento.
+Herramientas.
+
+\section{Material Bibliografico}
+
+La gran mayoria de las referencias son a su vez material a utilizar durante la investigacion.
+
+\begin{enumerate}
+\item{Design Patterns}. Base de todo estudio de patrones de dise\~no
+\item{Linux Device Drivers}. Detalles de implementacion de subsistemas utilizando patrones de reuso.
+\item{G. Mattson, B.A. Sanders and B.L. Massingill, Patterns for Parallel Programming, Addison-Wesley, 2004}.
+\end{enumerate}
+
+\section{Plan de Actividades}
 
 \appendix
-\section{Others}
+\section{Ejemplo Integrador}
 
-\bibliographystyle{unsrt}
-\bibliography{mm}
+\subsection{matrix}
+
+Matrices\cite{lamport94}.
+
+\subsection{queens}
+
+\subsection{heat2}
+
+\begin{thebibliography}{9}
+ 
+\bibitem{lamport94}
+  Leslie Lamport,
+  \emph{\LaTeX: A Document Preparation System}.
+  Addison Wesley, Massachusetts,
+  2nd Edition,
+  1994.
+ 
+\end{thebibliography}
 
 \end{document}
