--- a/trunk/doc/doc.tex
+++ b/trunk/doc/doc.tex
@@ -17,7 +17,6 @@
 \begin{abstract}
 Este documento describe una propuesta de trabajo final para Especializacion en Computo de Altas Prestaciones.
 Idea. Beneficios. Ejemplo.
-Cierre.
 \end{abstract}
 \end{@twocolumnfalse}
 ]
@@ -59,11 +58,12 @@ La gran mayoria de las referencias son a su vez material a utilizar durante la i
 \section{Plan de Actividades}
 
 \appendix
+
 \section{Ejemplo Integrador}
 
 \subsection{matrix}
 
-Matrices\cite{lamport94}.
+Matrices.
 
 \subsection{queens}
 
@@ -71,13 +71,23 @@ Matrices\cite{lamport94}.
 
 \begin{thebibliography}{9}
  
-\bibitem{lamport94}
-  Leslie Lamport,
-  \emph{\LaTeX: A Document Preparation System}.
-  Addison Wesley, Massachusetts,
-  2nd Edition,
-  1994.
- 
+\bibitem{mpi}
+  Message Passing Interface Forum,
+  \emph{MPI: A Message-Passing Interface Standard},
+  2.2,
+  2009.
+
+\bibitem{openmp}
+  OpenMP Architecture Review Board,
+  \emph{OpenMP Application Program Interface}.
+  3.0,
+  2008.
+
+\bibitem{tinetti}
+  Fernando Tinetti,
+  \emph{Computo Paralelo en Redes Locales de Computadoras},
+  2004.
+
 \end{thebibliography}
 
 \end{document}
