--- a/trunk/doc/doc.tex
+++ b/trunk/doc/doc.tex
@@ -12,33 +12,34 @@
 \date{Mayo 2009}
 
 \twocolumn[
-\begin{@twocolumnfalse}
-\maketitle
-\begin{abstract}
-Este documento describe una propuesta de trabajo final para Especializacion en Computo de Altas Prestaciones.
-Idea. Beneficios. Ejemplo.
-\end{abstract}
-\end{@twocolumnfalse}
+  \begin{@twocolumnfalse}
+    \maketitle
+    \begin{abstract}
+      Este documento describe una propuesta de trabajo final para la especializaci\'on en c\'omputo de altas prestaciones.
+      Idea. Beneficios. Ejemplo.
+      
+    \end{abstract}
+  \end{@twocolumnfalse}
 ]
 
 \tableofcontents
 
 \section{Objetivos}
 
-Generar una taxonomia de metodos de analisis de rendimiento.
-Realizar una comparacion de los mismos.
+Generar una taxonomia de m\'etodos de analisis de rendimiento.
+Realizar una comparaci\'on de los mismos.
 Ejercitar estas herramientas, documentando pasos y problemas comunes.
 Proponer un proceso de analisis para aplicaciones de alto rendimiento.
 Generar infrastructura que soporte automaticamente el analisis de performance.
-Generar una libreria que facilite el desarollo de aplicaciones de altas prestaciones.
-Documentar requerimientos generales de aplicacions de altas prestaciones.
+Generar una librer\'ia que facilite el desarollo de aplicaciones de altas prestaciones.
+Documentar requerimientos generales de aplicacioness de altas prestaciones.
 Generalizar las aplicaciones utilizando un pipeline.
 
 \section{Motivacion y Estado del Arte}
 
 MPI.
 Expertos en Dominio.
-Analisis de Performance es artesanal.
+Analisis de Rendimiento es artesanal.
 
 \section{Temas a Investigar}
 
@@ -47,11 +48,11 @@ Herramientas.
 
 \section{Material Bibliografico}
 
-La gran mayoria de las referencias son a su vez material a utilizar durante la investigacion.
+La gran mayor\'ia de las referencias son a su vez material a utilizar durante la investigaci\'on.
 
 \begin{enumerate}
+\item{Linux Device Drivers}. Detalles de implementaci\'on de subsistemas utilizando patrones de reuso.
 \item{Design Patterns}. Base de todo estudio de patrones de dise\~no
-\item{Linux Device Drivers}. Detalles de implementacion de subsistemas utilizando patrones de reuso.
 \item{G. Mattson, B.A. Sanders and B.L. Massingill, Patterns for Parallel Programming, Addison-Wesley, 2004}.
 \end{enumerate}
 
@@ -63,14 +64,18 @@ La gran mayoria de las referencias son a su vez material a utilizar durante la i
 
 \subsection{matrix}
 
-Matrices.
+Multiplicaci\'on de matrices.
 
 \subsection{queens}
 
+Reinas de ajedrez.
+
 \subsection{heat2}
 
+Distribuci\'on de calor en dos dimensiones.
+
 \begin{thebibliography}{9}
- 
+  
 \bibitem{mpi}
   Message Passing Interface Forum,
   \emph{MPI: A Message-Passing Interface Standard},
