--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -38,16 +38,18 @@ Al mismo tiempo, el desarrollo de estas aplicaciones suele ser para un uso espec
 
 Actualmente existen diversos m\'etodos y tecnolog\'ias para el an\'alisis de rendimiento.
 
-Lo mas simple es utilizar el tiempo total de ejecucion. O medir el uso de recursos del sistema durante la ejecucion de la aplicacion.
+Lo m\'as simple es utilizar el tiempo total de ejecuci\'on. O medir el uso de recursos del sistema durante la ejecuci\'on de la aplicaci\'on.
 
-Instrumentacion.
-Espacio de Usuario.
-Sistema Operativo.
-Contadores de Hardware. Registros de CPUs.
+Existen multiples conceptos a considerar.
+An\'alisis est\'atico o din\'amico.
+Instrumentacion de c\'odigo.
+Analisis desde Espacio de Usuario.
+Rendimiento del Sistema Operativo.
+Registros Contadores de Hardware. Registros de CPUs.
 
 \section{Objetivos}
 
-Generar una taxonomia de m\'etodos de analisis de rendimiento.
+Generar una taxonom\'ia de m\'etodos de analisis de rendimiento.
 
 Realizar una comparaci\'on de los mismos.
 
@@ -181,9 +183,35 @@ J. Levon,
  \emph{Patterns for Parallel Programming, Addison-Wesley},
  2004.
 
-7 dwards of performance analysis
+\bibitem{automatic-performance-analysis}
+ T. Margalef, J. Jorba, O. Morajko, A. Morajko, E. Luque,
+ \emph{Different approaches to automatic performance analysis of distributed applications},
+ 2004.
 
-M\'as?
+\bibitem{capturing-performance-knowledge}
+ K. Huck, O. Hernandez, V. Bui, S. Chandrasekaran, B. Chapman, A. Malony, L McInnes, B. Norris,
+ \emph{Capturing performance knowledge for automated analysis},
+ 2008.
+
+\bibitem{automatic-openmp-mpi-analysis}
+ F. Wolf, B. Mohr,
+ \emph{Automatic performance analysis of hybrid MPI/OpenMP applications},
+ 2003.
+
+\bibitem{intro-software-performance}
+ C. Smith,
+ \emph{Introduction to software performance engineering: origins and outstanding problems},
+ 2007.
+
+\bibitem{future-software-performance}
+ M. Woodside, G. Franks, D. Petriu,
+ \emph{The Future of Software Performance Engineering},
+ 2007.
+
+\bibitem{critical-overview}
+ J. Browne,
+ \emph{A critical overview of computer performance evaluation},
+ 1976.
 
 \end{thebibliography}
 
