--- a/trunk/doc/doc.tex
+++ b/trunk/doc/doc.tex
@@ -213,6 +213,18 @@ J. Levon,
  \emph{A critical overview of computer performance evaluation},
  1976.
 
+\bibitem{hpctoolkit}
+  Rice University,
+ \emph{HPC Toolkit},
+ {\tt http://hpctoolkit.org}.
+
+\bibitem{papi}
+  TBD,
+  \emph{Performance Application Programming Interface},
+  {\tt http://icl.cs.utk.edu/papi}.
+
+% http://en.wikipedia.org/wiki/Performance_tuning
+
 \end{thebibliography}
 
 \end{document}
